--- a/AlgoritmosDeOrdenacao/nbproject/project.properties
+++ b/AlgoritmosDeOrdenacao/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=true
 javadoc.windowtitle=
-main.class=
+main.class=VISAO.MainApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
